// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ChatItemTargetText RENDER continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 60,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <ContextMenu
      actions={
        Array [
          Object {
            "systemIcon": "arrow.turn.up.left",
            "title": "Reply",
          },
          Object {
            "systemIcon": "square.on.square",
            "title": "Copy Message",
          },
          Object {
            "destructive": true,
            "systemIcon": "trash",
            "title": "Delete Message",
          },
        ]
      }
      onPress={[Function]}
      previewBackgroundColor="transparent"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#003848",
              },
              Object {
                "borderRadius": 8,
                "borderTopEndRadius": 0,
                "flex": 1,
                "paddingBottom": 4,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 4,
              },
              Object {
                "paddingBottom": 14,
              },
            ]
          }
        >
          <Text
            onTextLayout={[Function]}
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 19.36,
                "marginBottom": 4,
              }
            }
          >
            message
          </Text>
          <View
            style={
              Object {
                "alignSelf": "flex-end",
                "bottom": 6,
                "position": "absolute",
                "right": 8,
              }
            }
          >
            <View />
          </View>
        </View>
      </View>
    </ContextMenu>
    <View
      style={
        Object {
          "borderRadius": 12,
          "height": 24,
          "marginLeft": 8,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER not continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 60,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <ContextMenu
      actions={
        Array [
          Object {
            "systemIcon": "arrow.turn.up.left",
            "title": "Reply",
          },
          Object {
            "systemIcon": "square.on.square",
            "title": "Copy Message",
          },
          Object {
            "destructive": true,
            "systemIcon": "trash",
            "title": "Delete Message",
          },
        ]
      }
      onPress={[Function]}
      previewBackgroundColor="transparent"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#003848",
              },
              Object {
                "borderRadius": 8,
                "borderTopEndRadius": 0,
                "flex": 1,
                "paddingBottom": 4,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 4,
              },
              Object {
                "paddingBottom": 14,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 12,
                  "lineHeight": 19.36,
                }
              }
            >
              username
            </Text>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "#ffffff",
                  "borderRadius": 2,
                  "height": 3,
                  "marginLeft": 5,
                  "marginRight": 5,
                  "width": 3,
                }
              }
            />
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#ffffff",
                  "fontFamily": "Inter-ExtraLight",
                  "fontSize": 10,
                  "lineHeight": 12.19,
                }
              }
            >
              time
            </Text>
          </View>
          <Text
            onTextLayout={[Function]}
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 19.36,
                "marginBottom": 4,
              }
            }
          >
            message
          </Text>
          <View
            style={
              Object {
                "alignSelf": "flex-end",
                "bottom": 6,
                "position": "absolute",
                "right": 8,
              }
            }
          >
            <View />
          </View>
        </View>
      </View>
    </ContextMenu>
    <View
      style={
        Object {
          "marginLeft": 8,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 12,
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://res.cloudinary.com/hpjivutj2/image/upload/v1680929851/default-profile-picture_vrmmdn.png",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
